# autokernel5090

./: .gitignore  DAY1_STATUS.md  DEEP_DIVE.md  DFLASH_PATCHES.md  EXPERIMENTS.md  EXPERIMENT_DISCOVERIES.md  FUSENCACHE.md  FUSENCACHE_VLLM_MAIN_STATUS.md  GEMMA4_NVFP4_BENCHMARKS.md  GEMMA4_NVFP4_STATUS.md  MOE_PROFILING.md  MTP_BATCH_FIX.md  README.md  README_OPEN_SOURCE.md  SESSION_FINAL_STATUS.md  SESSION_FINAL_STATUS_V2.md  WHITEPAPER.md  approach1_prebuild.py  approach2_eager.py  approach2b_selective.py  april7_experiments.md  batch_sweep.py  bench.py  bench_27b_nvfp4.py  bench_93k_serving.py  bench_c16_fix_results.txt  bench_concurrency_sweep.py  bench_dp2.py  bench_event_fence.py  bench_fusencache.py  bench_fusencache_kernel.py  bench_gemma4_nvfp4.py  bench_idlm_v2.py  bench_nvfp4_cudagraph.json  bench_nvfp4_fp8kv.json  bench_nvfp4_results.json  bench_prefix_cache.py  bench_serving.py  bench_sweep.py  bench_tp2.py  (+197 more)
autokernel_v2/: __init__.py  __main__.py  bottleneck_ranker.py  candidate_generator.py  cli.py  knowledge_base.py  optimizer.py  plugin_registry.py  profiler.py  types.py
docker/: apply_patches.sh  build_vllm.Dockerfile  build_vllm.sh
flashinfer-0.6.4-patched-backup/: _build_meta.py
fusen_kv/: .gitignore  CUDA_GRAPH_AUDIT.md  LICENSE  README.md  __init__.py  backend.py  compatibility.py  eval_perplexity.py  launch_k4v4b64.sh  launch_k4v4b64_eager.sh  launch_vllm.py  plugin.py  pyproject.toml  spec_resolver.py
fusen_kv/tests/: test_plugin.py
fusen_solver/: .gitignore  LICENSE  README.md  REVIEW.md  __init__.py  __main__.py  config.py  prefix_manager.py  pyproject.toml  streaming.py
fusen_solver/backends/: __init__.py  anthropic_backend.py  multi_backend.py  ollama_backend.py  openai_backend.py  retry.py  vllm_backend.py
fusen_solver/core/: __init__.py  codebase_index.py  incremental_context.py  interfaces.py  priority.py  solver.py
fusen_solver/integrations/: __init__.py  api.py  bcode_bridge.py  bcode_hook.py  bcode_shadow.py  cli.py
fusen_solver/learning/: __init__.py  tracker.py
fusen_solver/scoring/: __init__.py  engine.py  sandbox.py
fusen_solver/strategies/: __init__.py  engine.py  presets.py
fusen_solver/tests/: test_bcode_shadow.py  test_codebase_index.py  test_incremental_and_sandbox.py  test_solver.py
fusencache/: __init__.py  config.py  e2b_fp8_config.json  fusencache_attn.py  v4_selective.py  v4c_hook.py  v4c_patch.py
kernels/: FUSED_KERNEL_README.md  bench_fp8_decode.py  bench_fused_norm_fp4.py  dequantize_fused_gemm.py  fp8_decode_attention.py  fused_norm_fp4.py  nvfp4_matmul.py  quantized_matmul_w4a16.py  test_fp8_decode.py  test_fused_norm_fp4.py  triton_masked_attention.py
kv_cache_gen/: RESULTS.md  __init__.py  adaptive.py  bench_mixed_spec.py  bench_seqlen_scaling.py  bench_store.py  config.py  decode_simulator.py  eval_auto.json  eval_fp8_e5m2.json  generate.py  kernel.py  quality_eval.py  spec.py  sweep.py  sweep_full.py  sweep_full_results.tsv  sweep_results.tsv  test_kernel.py  warmup.py
media_cache/: cache.db
models/: bert_base.py  custom.py  gpt2.py  llama_7b.py
moe_gen/: __init__.py  bench.py  spec.py
nvfp4/: __init__.py  gemm.py  linear.py  quantize.py  (+3 more)
(+205 files in other folders)
