[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fusen-kv"
version = "0.1.0"
description = "Data-driven KV cache compression plugin for vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.1.0",
    "triton>=3.0.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.19.0"]

[project.entry-points."vllm.general_plugins"]
fusen_kv = "fusen_kv.plugin:register"

[tool.setuptools.packages.find]
include = ["fusen_kv*", "kv_cache_gen*"]
